src/views/snapshots/hn__views__comments__tests__comments_view_fills_viewport_with_partial_comments.snap
---
source: src/views/comments.rs
expression: output
---
Partial Render Test

┌Comments (3)──────────────────────────────────────────────────────────────────┐
│▶ [ ] user1 · 1d ago                                                          │
│      Short comment                                                           │
│                                                                              │
│  [ ] user2 · 1d ago                                                          │
│      Another short comment                                                   │
│                                                                              │
│  [ ] user3 · 1d ago                                                          │
│      This is a much longer comment that will wrap to multiple lines and      │
│      should be partially visible at the bottom of the viewport instead of    │
│      being skipped entirely causing blank space                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Comments  1/3 | l/h:expand  L/H:subtree  +/-:thread  f:fav  Esc:back  ?:help
